Prevent source listing from spilling off the right side in docs

--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -1,1 +1,3 @@
-/* This file intentionally left blank. */
+body {
+	tab-size: 4;
+}
